--- a/package/public/index.html
+++ b/package/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fonts Administration</title>
-  </head>
+  <script type="module" crossorigin src="/assets/index.f60ae4b4.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.f381c58c.js">
+  <link rel="stylesheet" href="/assets/index.219fcf76.css">
+</head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
