📦 release 1.0.66 solve out bug.

--- a/package/public/index.html
+++ b/package/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/fonts/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fonts Administration</title>
-  <script type="module" crossorigin src="/fonts/assets/index.1f20ee50.js"></script>
-  <link rel="modulepreload" href="/fonts/assets/vendor.74db56ab.js">
-  <link rel="stylesheet" href="/fonts/assets/index.bc2b3619.css">
+  <script type="module" crossorigin src="/assets/index.e2483c06.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.f9c4cc5e.js">
+  <link rel="stylesheet" href="/assets/index.bc2b3619.css">
 </head>
   <body>
     <div id="app"></div>
